--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#" class="logo">UniClima</a>
         <ul>
             <li><a href="#">Início</a></li>
+            <li><a href="#sec">Clima</a></li>
         </ul>
 
     </header>
@@ -24,7 +25,7 @@
         <img src="stars.png" id="stars">
         <img src="moon.png" id="moon">
         <h2 id="texto"> UniClima </h2>
-        <a href="#sec" id="btn">Buscar</a>
+        <a href="#sec" id="btn">Tempo</a>
         <img src="mountains_front.png" id="clouds">
 
     </section>
@@ -32,9 +33,10 @@
    <center>
     <div class="sec" id="sec">
 
-        <h2>DESCUBRA O CLIMA AO VIVO!</h2>
-        <p>Com o UniClima você descobre do conforto da sua casa a temperatura de sua cidade, 
-           até mesmo se deseja fazer uma viagem em família e deseja saber o clima, ninguém gosta de viajar na chuva, né? </p>
+        <h2>PREVISÃO DO TEMPO</h2>
+
+        <p style="font-size: larger;">Descubra a <strong> previsão do tempo </strong> da localidade de sua escolha em tempo real!</p>
+
         <div class="container-fluid p-0 container-sm d-flex justify-content-center">
 
             <div class="card text-center shadow-lg" style="width: 26rem;">
@@ -55,8 +57,8 @@
         
               <div class="card-footer bg-white">
                 <div class="input-group ">
-                  <input type="text" class="form-control bg-light" placeholder="Nome da Cidade" aria-label="Recipient's username" aria-describedby="button-addon2">
-                  <button class="btn btn-outline-warning text-dark" type="button" id="button-addon2">
+                  <input type="text" class="form-control bg-light" placeholder="Nome da Cidade" aria-label="Recipient's username" aria-describedby="button-addon2" style="height: 40px; width: 200px;">
+                  <button class="btn btn-outline-warning text-dark" type="button" id="button-addon2" style="height: 40px; width: 30px;" >
                     <i class="fas fa-search"></i>
                   </button>
                   <div class="input-group-append">
